// SPDX-License-Identifier: MIT
// Copyright 2023 BooleWorks GmbH

syntax = "proto3";
package boolerules.model;
import "model_featurestore.proto";
import "model_properties.proto";
import "model_rules.proto";
option java_package = "com.booleworks.prl.model.protobuf";
option java_outer_classname = "ProtoBufModel";

message PbHeader {
  int32 major = 1;
  int32 minor = 2;
  repeated properties.PbProperty properties = 3;
}

message PbModel {
  PbHeader header = 1;
  features.PbFeatureStore featureStore = 3;
  properties.PbPropertyStore propertyStore = 4;
  repeated rules.PbRule rule = 5;
  repeated features.PbFullFeature feature = 6;
}
